syntax = "proto3";

package tanagra;

option java_package = "bio.terra.tanagra.proto.criteriaselector";

message DataRange {
  string id = 1;
  double min = 2;
  double max = 3;
}
